WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266215
NativeImages are slow to create from remote contexts
https://bugs.webkit.org/show_bug.cgi?id=266215
Summary
NativeImages are slow to create from remote contexts
Kimmo Kinnunen
Reported
2023-12-11 04:53:21 PST
NativeImages are slow to create from remote contexts Problematic because NativeImage is the fundamental image source that GraphicsContext can use.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-11 04:53:29 PST
<
rdar://problem/119489233
>
Kimmo Kinnunen
Comment 2
2025-09-24 04:49:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51251
EWS
Comment 3
2025-10-01 01:39:28 PDT
Committed
300811@main
(827b5833cabf): <
https://commits.webkit.org/300811@main
> Reviewed commits have been landed. Closing PR #51251 and removing active labels.
Jonathan Bedard
Comment 4
2025-10-01 06:40:01 PDT
Reopened Bugzilla. Broke Internal visionOS build, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=299953
.
Kimmo Kinnunen
Comment 5
2025-10-01 12:21:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51640
EWS
Comment 6
2025-10-03 01:08:53 PDT
Committed
300927@main
(a2862b735dbd): <
https://commits.webkit.org/300927@main
> Reviewed commits have been landed. Closing PR #51640 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug