Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.cpp
@@ -36,6 +36,7 @@
 #include "Logging.h"
 #include "RemoteImageBufferMessages.h"
 #include "RemoteImageBufferProxyMessages.h"
+#include "RemoteNativeImageProxy.h"
 #include "RemoteRenderingBackendProxy.h"
 #include "RemoteSharedResourceCacheMessages.h"
 #include "WebPage.h"
@@ -146,7 +147,7 @@ void RemoteImageBufferProxy::assertDispatcherIsCurrent() const
 }
 
 template<typename T>
-ALWAYS_INLINE void RemoteImageBufferProxy::send(T&& message)
+ALWAYS_INLINE void RemoteImageBufferProxy::send(T&& message) const
 {
     RefPtr connection = this->connection();
     if (!connection) [[unlikely]]
@@ -160,7 +161,7 @@ ALWAYS_INLINE void RemoteImageBufferProxy::send(T&& message)
 }
 
 template<typename T>
-ALWAYS_INLINE auto RemoteImageBufferProxy::sendSync(T&& message)
+ALWAYS_INLINE auto RemoteImageBufferProxy::sendSync(T&& message) const
 {
     RefPtr connection = this->connection();
     if (!connection) [[unlikely]]
@@ -275,19 +276,18 @@ RefPtr<NativeImage> RemoteImageBufferProxy::copyNativeImage() const
 {
     auto* backend = ensureBackend();
     if (!backend)
-        return { };
+        return nullptr;
     if (backend->canMapBackingStore()) {
         const_cast<RemoteImageBufferProxy*>(this)->flushDrawingContext();
         return ImageBuffer::copyNativeImage();
     }
     RefPtr renderingBackend = m_renderingBackend.get();
     if (!renderingBackend) [[unlikely]]
-        return { };
-
-    auto bitmap = renderingBackend->getShareableBitmap(m_renderingResourceIdentifier, PreserveResolution::Yes);
-    if (!bitmap)
-        return { };
-    return NativeImage::create(bitmap->createPlatformImage(DontCopyBackingStore));
+        return nullptr;
+    bool hasAlpha = !pixelFormatIsOpaque(pixelFormat());
+    Ref nativeImage = renderingBackend->remoteResourceCacheProxy().createNativeImage(backendSize(), colorSpace().platformColorSpace(), hasAlpha);
+    const_cast<RemoteImageBufferProxy*>(this)->send(Messages::RemoteImageBuffer::CopyNativeImage(nativeImage->renderingResourceIdentifier()));
+    return nativeImage;
 }
 
 RefPtr<NativeImage> RemoteImageBufferProxy::createNativeImageReference() const
